<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory android:title="@string/pref_password_setting">
	</PreferenceCategory>
	    <CheckBoxPreference
	        android:key="enable_password"
			android:title="@string/pref_password_enable"
			android:summary="@string/pref_password_enable_summary"
			android:defaultValue="false">
			<intent
				android:targetPackage="com.ybproject.diarymemo"
				android:targetClass="com.ybproject.diarymemo.passwordmanager.InsertPassword"
			/>
		</CheckBoxPreference>
        <PreferenceScreen
			android:title="@string/pref_password_chang"
			android:summary="@string/pref_password_chang_summary"
			android:enabled="true">
			<intent
				android:targetPackage="com.ybproject.diarymemo"
				android:targetClass="com.ybproject.diarymemo.passwordmanager.InsertPassword"
			/>
		</PreferenceScreen>
</PreferenceScreen>