<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!-- 광고 삽입-->
    <net.daum.adam.publisher.AdView
        android:id="@+id/adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:id="@+id/version_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:gravity="center"
        android:textColor="#FFFF00"
        android:text="@string/version" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:autoLink="all"
        android:text="@string/app_description" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="5sp"
        android:layout_weight="0.40"
        android:autoLink="all"
        android:text="@string/homepage" />

    <Button
        android:id="@+id/btnok2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
        android:onClick="newOnClick"
        android:text="@string/check_version" />

</LinearLayout>
