<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
 	android:orientation="vertical"
 	android:layout_weight="0"
 	android:background="@drawable/list_background_new"
 >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<EditText android:id="@+id/title" 
			android:layout_width="fill_parent" 
			android:textColor="#000000"
			android:layout_height="wrap_content"/>
		
		 <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_margin="5dip"
            android:layout_marginTop="5dip"
            android:textColor="#808080"
            android:text="@string/edit_title_info"
            android:textSize="16sp" />
	</LinearLayout>	
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<Button android:id="@+id/confirm" 
			android:text="@string/dialog_confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>			
		<Button android:id="@+id/cancel" 
			android:text="@string/dialog_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
	</LinearLayout>
</LinearLayout>
