<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
     <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal"
	    android:background="@null" >
    	<Button
	        android:id="@+id/btn_back"
	        android:clickable="true"
	        android:layout_alignParentLeft="true"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginTop="5dip"
	        android:scaleType="fitCenter"
	        android:textColor="#FFFFFF"
	        android:text="@string/dialog_cancel" />
	        
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:paddingTop="13dip"
	        android:layout_centerInParent="true"
	        android:text="@string/draw_config"
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"/>
	    
	    <Button
	        android:id="@+id/btn_save"
	        android:clickable="true"
	        android:layout_alignParentRight="true"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginTop="5dip"
	        android:scaleType="fitCenter"
	        android:textColor="#FFFFFF"
	        android:text="@string/dialog_confirm" />
	</RelativeLayout>

    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:layout_marginLeft="20dp"
    	>
	    <LinearLayout
	    	android:orientation="vertical"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	>
	    	<LinearLayout
	    	android:orientation="horizontal"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	>
		    	<TextView			    
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center_vertical"
			    		android:text="@string/set_width"
			    		android:textSize="14dp"
			    		/>	
			    <ImageButton
			   	android:id="@+id/btn_width"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:background="@drawable/sel_menupen"
			   	/>
   			</LinearLayout>
		   	<LinearLayout
		    	android:orientation="horizontal"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginTop="20dp"
		    	>
		    	<TextView			     
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center_vertical"
			    		android:text="@string/set_color"
			    		android:textSize="14dp"
			    		/>	
			    <ImageButton
			   	android:id="@+id/btn_color"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:background="@drawable/sel_menucolor"
			   	/>
		   </LinearLayout>
	   </LinearLayout>
   	 	<View
	    	android:id="@+id/setWidth"
	    	android:layout_width="100dp"
	    	android:layout_height="80dp"
	    	android:layout_marginLeft="30dp"
	    	android:background="#ffffffff"
	    	android:gravity="center"
	    />
    </LinearLayout>
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="30dp"
    	android:layout_marginLeft="20dp"
    	>
    	<TextView			    
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
   		android:text="@string/set_favorite_color"
   		android:gravity="center_vertical"
   		android:textSize="14dp"
    	/>	
    	<View
	    	android:id="@+id/color1"
	    	android:layout_width="40dp"
	    	android:layout_height="30dp"
	    	android:layout_marginLeft="20dp"
	    	android:background="#ffffffff"
	    	android:gravity="center_vertical"
	    />
	    <View
	    	android:id="@+id/color2"
	    	android:layout_width="40dp"
	    	android:layout_height="30dp"
	    	android:layout_marginLeft="10dp"
	    	android:background="#ffffffff"
	    	android:gravity="center_vertical"
	    />
	    <View
	    	android:id="@+id/color3"
	    	android:layout_width="40dp"
	    	android:layout_height="30dp"
	    	android:layout_marginLeft="10dp"
	    	android:background="#ffffffff"
	    	android:gravity="center_vertical"
	    />
   	</LinearLayout>
   	<TextView 
   	    android:layout_width="fill_parent"
   	    android:layout_height="50dp"
   	    android:gravity="center"
   	    android:layout_marginTop="15dp"
   	    android:text="이 옵션은 그리기 메모시 기본설정 값입니다.\n미리 펜크기등을 지정해 놓으시면 편합니다^^"/>
	<!-- 광고 삽입-->
    <net.daum.adam.publisher.AdView
        android:id="@+id/adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="invisible" />
</LinearLayout>
